Correcao dos issues do codigo